# bmds273b-project

./: .gitignore  main.py  pyproject.toml
data/regulatory/embeddings/hyenadna/: window_ids.txt
data/regulatory/results/: baseline_results.tsv  bootstrap_ci.tsv  paired_bootstrap.tsv  probe_results.tsv
data/regulatory/results_evo2/: probe_results.tsv
docs/: cost_estimate.md  project_proposal.md  ta_feedback.md  technical_steps.md
docs/results/: regulatory_paper.md  regulatory_results.md
logs/: 20260527_182038_progress.md  20260527_191556_regulatory_compute_decision.md  20260530_070337_regulatory_task_plan.md  20260530_074500_regulatory_implementation_progress.md  20260530_091500_regulatory_findings_and_handoff.md  20260530_172751_regulatory_next_step_scale_dataset.md
src/: extract_embeddings.py  extract_embeddings_evo2.py  modal_app.py  modal_caduceus.py  modal_evo2.py
src/regulatory/: 00_download_data.sh  03_train_probes.py  04_baselines.py  05_umap_visualization.py  README.md  baselines.py  bootstrap_ci.py  build_windows.py  download_data.sh  paired_bootstrap.py  umap_visualization.py
src/species/: 00_download_data.sh  01_subsample_species.py  03_build_phylo_distance.py  04_extract_embeddings_dnabert_s.py  04_extract_embeddings_evo2.py  04_extract_embeddings_nt.py  05_train_probes.py  05_train_probes_dnabert_s.py  05_train_probes_nt.py  06_umap_visualization.py  06_umap_visualization_nt.py  README.ipynb
src/species/processed_data/: README.txt  data1  species_index.tsv  species_split.json
tests/: test_build_windows.py
(+11 files in other folders)
