[project]
name = "bmds273b-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "biopython>=1.87",
    "dendropy>=5.0.8",
    "ete3>=3.1.3",
    "peft>=0.19.1",
    "pybedtools>=0.12.0",
    "pyfaidx>=0.9.0.4",
    "pyranges>=0.1.4",
    "pysam>=0.24.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
