[project]
name = "bmds273b-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "biopython>=1.87",
    "dendropy>=5.0.8",
    "ete3>=3.1.3",
    "evo2>=0.5.5",
    "h5py>=3.16.0",
    "nvidia-nccl-cu12>=2.26.2",
    "peft>=0.19.1",
    "pybedtools>=0.12.0",
    "pyfaidx>=0.9.0.4",
    "pyranges>=0.1.4",
    "pysam>=0.24.0",
    "scikit-learn>=1.8.0",
    "torch==2.7.1",
    "transformers>=5.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
